--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cy:open": "cypress open & yarn start --silent"
+    "cy:open": "cypress open & yarn start --silent",
+    "cy:run": "BROWSER=none yarn start & cypress run"
   },
   "eslintConfig": {
     "extends": "react-app"
